infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: backend-service
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: backend-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: backend-service
    spec:
      containers:
        - image: ibro2002/stress-test_backend
          name: backend
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
