infra/slavedb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: slavedb-service
  name: slavedb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: slavedb-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: slavedb-service
    spec:
      containers:
        - env:
            - name: POSTGRESQL_MASTER_HOST
              value: masterdb
            - name: POSTGRESQL_MASTER_PORT_NUMBER
              value: '5432'
            - name: POSTGRESQL_PASSWORD
              value: '123'
            - name: POSTGRESQL_REPLICATION_MODE
              value: slave
            - name: POSTGRESQL_REPLICATION_PASSWORD
              value: ibrahim123
            - name: POSTGRESQL_REPLICATION_USER
              value: ibrahim
          image: bitnami/postgresql
          name: slavedb-deployment
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
