infra/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: backend-service
  name: backend-service
spec:
  ports:
    - name: '8070'
      port: 8070
      targetPort: 80
  selector:
    io.kompose.service: backend-service
status:
  loadBalancer: {}
