infra/masterdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: masterdb-service
  name: masterdb-service
spec:
  ports:
    - name: '5432'
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: masterdb-service
status:
  loadBalancer: {}
