infra/slavedb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: slavedb-service
  name: slavedb-service
spec:
  ports:
    - name: '5433'
      port: 5433
      targetPort: 5432
  selector:
    io.kompose.service: slavedb-service
status:
  loadBalancer: {}
